<resources>
    <string name="app_name">AndroidDataService</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_title">Android data service</string>
    <string name="title_activity_slide">SlideActivity</string>
    <string name="id">Id: </string>
    <string name="firstName">First name: </string>
    <string name="phone">Phone: </string>
    <string name="email">E-mail: </string>
    <string name="insert_button">Insert data</string>
    <string name="user_information">User information</string>
    <string name="refresh_button">Refresh list</string>

    <string name="application_error">Application error.</string>
    <string name="saved_user_info">User information was saved.</string>
    <string name="unable_to_save_user_info">Unable to save user information.</string>
    <string name="enter_first_name">Please, enter first name.</string>
    <string name="enter_phone">Please, enter phone number.</string>
    <string name="enter_email">Please, enter email.</string>
    <string name="wrong_phone_number">Phone number is not correct.</string>
    <string name="wrong_email">Email is not correct.</string>
</resources>
